--- a/Android/cambioagora/AndroidManifest.xml
+++ b/Android/cambioagora/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.maiconspas.cambioagora"
-    android:versionCode="4"
-    android:versionName="1.3" >
+    android:versionCode="10"
+    android:versionName="1.9" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -22,15 +22,20 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.gmail.maiconspas.cambioagora.PreferenceActivity">
+        <activity android:name="com.gmail.maiconspas.cambioagora.PreferenceActivity" >
         </activity>
 
         <service
             android:name="com.gmail.maiconspas.cambioagora.service.SyncService"
             android:enabled="true" />
+
+        <activity
+            android:name="com.gmail.maiconspas.cambioagora.HistoryActivity">
+        </activity>
     </application>
 
 </manifest>
